# event-scheduler

./: CMakeLists.txt  CalendarManager.cpp  CalendarManager.h  IntervalTree.cpp  IntervalTree.h  README.md  gitignore  main.cpp  tests.cpp
